[package]
name = "hjs-sssp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Haeupler–Jiang–Saranurak 2025 algorithm for single-source shortest paths with negative weights"
repository = "https://github.com/AlexanderNenninger/hjs-sssp"

[features]
parallel = ["dep:rayon"]

[dependencies]
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "sssp"
harness = false
