[package]
name = "hjs-sssp"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Haeupler–Jiang–Saranurak 2025 algorithm for single-source shortest paths with negative weights"
repository = "https://github.com/AlexanderNenninger/hjs-sssp"

[lib]
name = "hjs_sssp"
crate-type = ["rlib", "cdylib"]

[features]
parallel = ["dep:rayon"]
python = ["dep:pyo3"]

[dependencies]
rayon = { version = "1", optional = true }
# extension-module is intentionally NOT listed here: maturin injects it
# automatically when building a cdylib Python extension.  Without it,
# `cargo test --features python` can link against libpython normally.
# abi3-py38: build against the stable Python 3.8 ABI so one wheel runs on
# Python 3.8+ without needing a per-interpreter rebuild.
pyo3 = { version = "0.28", optional = true, features = ["abi3-py38"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# pprof uses Unix-only APIs (nix, pthread); exclude it on Windows.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

[profile.bench]
lto = "fat"
codegen-units = 1
debug = true

[[bench]]
name = "sssp"
harness = false
